Some optimizations and bug fixes